fix(dropdown): update icon spacing to child combinator and set icon-text spacing without link for breadcrumb-item

--- a/src/styles/mixins/icon-text.scss
+++ b/src/styles/mixins/icon-text.scss
@@ -17,13 +17,13 @@
 
 @mixin icon-text-size($prefix-space, $suffix-space, $icon-font-size: null) {
     @if $prefix-space {
-        .thy-icon:first-child {
+        > .thy-icon:first-child {
             margin-right: $prefix-space;
         }
     }
 
     @if $suffix-space {
-        .thy-icon:last-child {
+        > .thy-icon:last-child {
             margin-left: $suffix-space;
         }
     }
